# CHATBOT_RAG-

./: app.py  pyproject.toml  requirements.txt  start.sh  streamlit_app.py
notebook/: chat_bot.ipynb
src/: Llm.py  data_ingestion.py  embedding.py  retriver.py  vector_store.py
vector_store/: chroma.sqlite3
